--- a/package.json
+++ b/package.json
@@ -8,49 +8,49 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "lintfix": "ng lint predictor --fix",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.4",
-    "@angular/cdk": "^7.3.1",
-    "@angular/common": "7.2.4",
-    "@angular/compiler": "7.2.4",
-    "@angular/core": "7.2.4",
-    "@angular/flex-layout": "^7.0.0-beta.23",
-    "@angular/forms": "7.2.4",
-    "@angular/http": "7.2.4",
-    "@angular/material": "^7.3.1",
-    "@angular/platform-browser": "7.2.4",
-    "@angular/platform-browser-dynamic": "7.2.4",
-    "@angular/router": "7.2.4",
-    "core-js": "^2.4.1",
+    "@angular/animations": "8.2.10",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "8.2.10",
+    "@angular/compiler": "8.2.10",
+    "@angular/core": "8.2.10",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "8.2.10",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "8.2.10",
+    "@angular/platform-browser-dynamic": "8.2.10",
+    "@angular/router": "8.2.10",
+    "core-js": "^3.3.2",
     "hammerjs": "^2.0.8",
-    "rxjs": "^6.4.0",
-    "rxjs-tslint": "^0.1.6",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.8.29"
+    "rxjs": "^6.5.3",
+    "rxjs-tslint": "^0.1.7",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "7.3.0",
-    "@angular/compiler-cli": "7.2.4",
-    "@angular/language-service": "7.2.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~10.12.21",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~3.3.0",
+    "@angular-devkit/build-angular": "~0.803.9",
+    "@angular/cli": "8.3.9",
+    "@angular/compiler-cli": "8.2.10",
+    "@angular/language-service": "8.2.10",
+    "@types/jasmine": "~3.4.4",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~12.7.12",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
-    "ts-node": "~8.0.2",
-    "tslint": "~5.12.1",
-    "typescript": ">=3.1.1 <3.3"
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
+    "typescript": ">=3.4 <3.6"
   }
 }
